--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ h1{
     font-weight: 700;
 }
 
-.section-area{
+.welcome-area{
+    display: flex;
+    margin-bottom: 2in;
+}
+.dream-area{
     display: flex;
     margin-bottom: 2in;
 }
@@ -19,6 +23,7 @@ h1{
     background-image: linear-gradient(orange,tomato);
     text-decoration: none;
     padding: 5px 15px;
+    color: white;
 }
 .half-width{
     width: 50%;
@@ -38,4 +43,35 @@ h1{
     background-repeat: no-repeat;
     background-position: right;
     padding-right: 10%;
+}
+.experiences-area{
+   margin-bottom: 2in;
+   background-image: url(image/exp-bg.png);
+   background-repeat: no-repeat;
+   background-position: left;
+}
+.experience-area-div{
+    display: flex;
+    
+}
+.experiences-area-box{
+    width: 50%;
+    
+    box-shadow: 10px 20px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 15px;
+}
+#full-stack{
+    border-left: 5px solid;
+    border-image: linear-gradient(orange,tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 5px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
